@@ -1,3 +1,7 @@
+2003-04-05	ujwal
+
+    * Fixed write problem when prompted for passwords.
+    
 2003-04-02	ujwal
 
     * Fixed a problem that was causing iTerm to hang when 
